<resources>
    <string name="app_name">App</string>
    <string name="ok">translitable</string>
    <string name="hello">Hello</string>
    <string name="sign_in" translatable="false">Sign_in</string>
    <string name="sign_up" translatable="false">Sign_up</string>
    <string name="avatar" translatable ="false">Avatar</string>
    <string name="name1" translatable ="false">Имя</string>
    <string name="name2" translatable ="false">Фамилия</string>
    <string name="name3" translatable ="false">Отчество</string>
    <string name="login" translatable ="false">Login</string>
    <string name="pass" translatable ="false">Pass</string>
    <string name="done" >Готово</string>
</resources>